--- a/lesson6_assignment/style.css
+++ b/lesson6_assignment/style.css
@@ -2,22 +2,24 @@
 /* CSS Document created originally by Christy Chatmon,edited by Sophia Vo, Spring 2019*/
 
 body {
+	margin: 0 auto;
 	font-family: Georgia, Times, Courier, serif;
 	font-size: 16px;
 	line-height: 1.4em;
 	color: #09040F;
-	background-color: #FF6F4D;
-	padding: 0 10px;
+	background-color: #09040F;
+	padding: 0 auto;
 }
 
 /* basic text styles ----------------------------  */
 p, li, td {
 	letter-spacing: 0.05em;
 	color: #FFFFF8;
+	padding: 10px 40px;
 }
 h1 {
 	font-size: 40px;
-	padding: 0.5px 0;
+	padding: 10px 40px;
 	font-variant: normal;
 	letter-spacing: 0.05em;
 	line-height: 0.5em;
@@ -25,10 +27,13 @@ h1 {
 h2 {
 	font-size: 30px;
 	line-height: 1.4em;
-	padding: 5px;
+	padding: 10px;
 	font-variant: normal;
 	letter-spacing: 0.05em;
 	background-color: #E83767;
+	width: 98%;
+	border-color: #AF00FF;
+	border-style: double;
 }
 h3 {
 	font-size: 20px;
@@ -46,6 +51,7 @@ a:link {
 	font-weight: bolder;
 	color: #AF00FF;
 	text-decoration: none;
+
 }
 a:visited {
 	font-weight: lighter;
@@ -53,7 +59,7 @@ a:visited {
 	text-decoration: none;
 }
 a:hover {
-	color: #E83767;
+	color: #09040F;
 }
 
 /* list styles ----------------------------- */
@@ -67,7 +73,8 @@ ol {
 
 /* table styles -------------------------------------- */
 table {
-	border: ridge #AF00FF 2px;
+	border: hidden #AF00FF 3px;
+	padding: 5px 40px;
 }
 td {
 	padding: 8px;
@@ -87,7 +94,7 @@ hr {
 }
 
 img {
-	border: ridge #E83767 2px;
+	border-bottom: ridge #09040F 2px;
 
 }
 
@@ -95,4 +102,49 @@ iframe {
 	border: ridge #E83767 2px;
 	padding: 10px;
 	margin: 10px;
+}
+
+/* div styles for page layout ------------------------ */
+#container {
+	margin: 0 auto;
+	width: 1195.08px;
+	border: 3px solid #E83767;
+	background-color: #FF6F4D;
+	overflow: hidden;
+	padding: 40px;
+	
+}
+	
+#header {
+	width: 1195.08px;
+	background-color: #E83767;
+	border-bottom: 3px solid #09040F;
+}
+
+#content {
+	width: 845;
+	padding-bottom: 40px;
+	float: left;
+}
+
+#sidebar {
+	width: 350px;
+	float: left;
+	margin-top: 110px;
+}
+#sidebar p {
+	border-style: double;
+	border-radius: 20px;
+	border-color: #AF00FF;
+	padding: 10px 40px;
+	background-color: #09040F;
+	box-shadow: 10px 10px 5px;
+}
+
+#footer  {
+	width: 100%;
+	background-color: #FF6F4D;
+	border-top: 3px solid #09040F;
+	clear: both;
+	text-align: left;
 }
